--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
-    <title>Take Of Recipe</title>
+    <title>Taste Of Recipe</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel="alternate" type="application/rss+xml" href="~/feed/index.html" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
