--- a/Views/Home/RecipeList.cshtml
+++ b/Views/Home/RecipeList.cshtml
@@ -5,7 +5,7 @@
 @{
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
     List<RecipeDetailDTO> allrecipe = await recipeRepository.GetLatestCreatedRecipes(8);
-    
+    List<Category> categories = await recipeRepository.GetRandomCategories(4);
     var i = 0;
 
 }
@@ -279,111 +279,22 @@
             </div>
         </div>
     </section>
-    <section class="elementor-section elementor-top-section elementor-element elementor-element-4ecf44f elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="4ecf44f" data-element_type="section">
+    <section >
         <div class="elementor-container elementor-column-gap-default">
             <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-456c9e5" data-id="456c9e5" data-element_type="column">
                 <div class="elementor-widget-wrap elementor-element-populated">
                     <section class="elementor-section elementor-inner-section elementor-element elementor-element-444be29 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="444be29" data-element_type="section">
                         <div class="elementor-container elementor-column-gap-default">
-                            <div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-c0fc478 elementor-invisible" data-id="c0fc478" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;zoomIn&quot;,&quot;animation_delay&quot;:480}">
-                                <div class="elementor-widget-wrap elementor-element-populated">
-                                    <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
-                                        <div class="elementor-widget-container">
-                                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
-                                                <div class="elementor-cta__bg-wrapper" style="border-radius:70%">
-                                                    <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/roasted-prawns-shrimps-in-frying-pan-with-lemon-and-chili-pepper-e1649757645348.jpg);"></div>
-                                                    <div class="elementor-cta__bg-overlay"></div>
-                                                </div>
-                                                <div class="elementor-cta__content">
-
-                                                    <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">Main Dish</h4>
-
-                                                    <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                        <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="#">
-                                                            Discover recipes 🡥
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>                          <div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-c0fc478 elementor-invisible" data-id="c0fc478" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;zoomIn&quot;,&quot;animation_delay&quot;:480}">
-                                <div class="elementor-widget-wrap elementor-element-populated">
-                                    <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
-                                        <div class="elementor-widget-container">
-                                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
-                                                <div class="elementor-cta__bg-wrapper" style="border-radius:70%">
-                                                    <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/roasted-prawns-shrimps-in-frying-pan-with-lemon-and-chili-pepper-e1649757645348.jpg);"></div>
-                                                    <div class="elementor-cta__bg-overlay"></div>
-                                                </div>
-                                                <div class="elementor-cta__content">
-
-                                                    <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">Main Dish</h4>
-
-                                                    <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                        <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="#">
-                                                            Discover recipes 🡥
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>                          <div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-c0fc478 elementor-invisible" data-id="c0fc478" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;zoomIn&quot;,&quot;animation_delay&quot;:480}">
-                                <div class="elementor-widget-wrap elementor-element-populated">
-                                    <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
-                                        <div class="elementor-widget-container">
-                                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
-                                                <div class="elementor-cta__bg-wrapper" style="border-radius:70%">
-                                                    <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/roasted-prawns-shrimps-in-frying-pan-with-lemon-and-chili-pepper-e1649757645348.jpg);"></div>
-                                                    <div class="elementor-cta__bg-overlay"></div>
-                                                </div>
-                                                <div class="elementor-cta__content">
-
-                                                    <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">Main Dish</h4>
-
-                                                    <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                        <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="#">
-                                                            Discover recipes 🡥
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>                          <div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-c0fc478 elementor-invisible" data-id="c0fc478" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;zoomIn&quot;,&quot;animation_delay&quot;:480}">
-                                <div class="elementor-widget-wrap elementor-element-populated">
-                                    <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
-                                        <div class="elementor-widget-container">
-                                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
-                                                <div class="elementor-cta__bg-wrapper" style="border-radius:70%">
-                                                    <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/roasted-prawns-shrimps-in-frying-pan-with-lemon-and-chili-pepper-e1649757645348.jpg);"></div>
-                                                    <div class="elementor-cta__bg-overlay"></div>
-                                                </div>
-                                                <div class="elementor-cta__content">
-
-                                                    <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">Main Dish</h4>
-
-                                                    <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                        <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="#">
-                                                            Discover recipes 🡥
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            @foreach (var category in categories)
+                            {
+                                @await  Component.InvokeAsync("SomeCategory", new { item = category})
+                            }
                         </div>
                     </section>
                 </div>
             </div>
         </div>
-    </section>    
+    </section>
     <section class="elementor-section elementor-top-section elementor-element elementor-element-7cd67ac elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="7cd67ac" data-element_type="section">
         <div class="elementor-container elementor-column-gap-default">
             <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-2c42f77" data-id="2c42f77" data-element_type="column">
