--- a/Views/Shared/Components/RecipeByCategory/Default.cshtml
+++ b/Views/Shared/Components/RecipeByCategory/Default.cshtml
@@ -62,4 +62,8 @@
             </div>
         </div>
     </div>
+}@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
 }
