--- a/Views/Shared/Components/SomeCategory/Default.cshtml
+++ b/Views/Shared/Components/SomeCategory/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Project3.DTO;
-@model CategoryDetail;
+@model Category;
 
 @if (Model != null)
 {
@@ -10,15 +10,15 @@
             <div class="elementor-widget-container" style="    border-style: solid;border-width: 14px 14px 14px 14px;border-color: var(--e-global-color-text );border-radius: 50% 50% 50% 50%;">
                 <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css"><div class="elementor-cta">
                     <div class="elementor-cta__bg-wrapper" style="border-radius:70%">
-                        <div class="elementor-cta__bg elementor-bg" style="background-image: url(https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/roasted-prawns-shrimps-in-frying-pan-with-lemon-and-chili-pepper-e1649757645348.jpg);">
+                        <div class="elementor-cta__bg elementor-bg" style="background-image: url(/@Model.Img);">
                         </div>
                         <div class="elementor-cta__bg-overlay"></div>
                     </div>
                     <div class="elementor-cta__content">
 
-                        <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">@Model.CategoryName</h4>
+                        <h4 class="elementor-cta__title elementor-cta__content-item elementor-content-item">@Model.Name</h4>
                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                            <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="#">
+                                <a class="elementor-cta__button elementor-button elementor-size-xs" style=" color: var(--e-global-color-text );background-color: var(--e-global-color-d49ac81 );border-width: 0px;" href="@Url.Action("Category", new {id = Model.Id})">
                                 Discover recipes 🡥
                             </a>
                         </div>
