--- a/Views/Admin/Users.cshtml
+++ b/Views/Admin/Users.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Project3.Repository;
-@inject IIngerdientRepository ingredientRepository;
-@inject IRecipeRepository recipeRepository;
+@inject IUserRepository userRepository;
 @{
 	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
@@ -8,22 +7,15 @@
 	<div class="container-fluid">
 		<div class="form-head d-flex mb-3 mb-lg-5 align-items-start">
 			<div class="me-auto d-none d-lg-block">
-				<a class="text-primary d-flex align-items-center mb-3 font-w500" href="index-2.html">
+				<a class="text-primary d-flex align-items-center mb-3 font-w500" href="/Admin/Index">
 					<svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M0.274969 5.14888C0.27525 5.1486 0.275484 5.14827 0.275812 5.14799L5.17444 0.272997C5.54142 -0.0922061 6.135 -0.090847 6.5003 0.276184C6.86555 0.643168 6.86414 1.23675 6.49716 1.60199L3.20822 4.87499H23.0625C23.5803 4.87499 24 5.29471 24 5.81249C24 6.33027 23.5803 6.74999 23.0625 6.74999H3.20827L6.49711 10.023C6.86409 10.3882 6.8655 10.9818 6.50025 11.3488C6.13495 11.7159 5.54133 11.7171 5.17439 11.352L0.275764 6.47699C0.275483 6.47671 0.27525 6.47638 0.274921 6.4761C-0.0922505 6.10963 -0.0910778 5.51413 0.274969 5.14888Z" fill="#EA4989" />
 					</svg>
 					Back
 				</a>
-				<a class="mb-0 text-secondary fs-18 font-w500" href="#">Contests  /</a>
-				<a class="mb-0 font-w500 fs-18" href="#"> All contests </a>
+				<a class="mb-0 text-secondary fs-18 font-w500" href="#">Users  /</a>
+				<a class="mb-0 font-w500 fs-18" href="#"> All users </a>
 			</div>
-			<a href="/Admin/AddOrUpdateContest" class="btn btn-success ms-auto btn-rounded d-md-flex d-inline-block">
-				<svg class="me-2 scale5" width="16" height="16" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M16.0007 1.33334C13.0999 1.33334 10.2642 2.19353 7.85229 3.80512C5.44037 5.41672 3.56051 7.70734 2.45042 10.3873C1.34034 13.0673 1.04989 16.0163 1.61581 18.8613C2.18172 21.7064 3.57859 24.3198 5.62976 26.3709C7.68093 28.4221 10.2943 29.819 13.1393 30.3849C15.9844 30.9508 18.9334 30.6603 21.6133 29.5503C24.2933 28.4402 26.584 26.5603 28.1955 24.1484C29.8071 21.7365 30.6673 18.9008 30.6673 16C30.6627 12.1116 29.116 8.38372 26.3665 5.63418C23.617 2.88464 19.8891 1.33793 16.0007 1.33334ZM16.0007 28C13.6273 28 11.3072 27.2962 9.33381 25.9777C7.36042 24.6591 5.82235 22.7849 4.9141 20.5922C4.00585 18.3995 3.76821 15.9867 4.23123 13.6589C4.69426 11.3312 5.83715 9.19296 7.51538 7.51473C9.19361 5.8365 11.3318 4.69361 13.6596 4.23059C15.9873 3.76757 18.4001 4.00521 20.5929 4.91346C22.7856 5.82171 24.6597 7.35978 25.9783 9.33317C27.2969 11.3066 28.0007 13.6266 28.0007 16C27.9971 19.1815 26.7317 22.2317 24.482 24.4814C22.2324 26.7311 19.1822 27.9965 16.0007 28Z" fill="white" />
-					<path d="M20.3901 11.724L14.6661 17.448L11.6088 14.3907C11.4858 14.2633 11.3387 14.1617 11.176 14.0919C11.0133 14.022 10.8384 13.9852 10.6613 13.9837C10.4843 13.9821 10.3087 14.0159 10.1449 14.0829C9.98099 14.1499 9.83212 14.2489 9.70693 14.3741C9.58174 14.4993 9.48274 14.6482 9.41569 14.8121C9.34865 14.9759 9.31492 15.1515 9.31646 15.3285C9.318 15.5056 9.35478 15.6805 9.42466 15.8432C9.49453 16.0059 9.59611 16.153 9.72346 16.276L13.7235 20.276C13.9735 20.5259 14.3126 20.6664 14.6661 20.6664C15.0197 20.6664 15.3587 20.5259 15.6088 20.276L22.2754 13.6093C22.5183 13.3579 22.6527 13.0211 22.6497 12.6715C22.6466 12.3219 22.5064 11.9875 22.2592 11.7402C22.012 11.493 21.6776 11.3528 21.328 11.3498C20.9784 11.3467 20.6416 11.4811 20.3901 11.724Z" fill="white" />
-				</svg>
-				Add new
-			</a>
 			<div class="input-group search-area ms-auto d-md-flex align-items-center d-inline-flex">
 				<input type="text" class="form-control" placeholder="Search here" id="search">
 				<div class="input-group-append">
@@ -35,19 +27,24 @@
 			<table class="display mb-4 table ">
 				<thead style="height: 70px">
 					<tr style="">
+						<th>Avatar</th>
 						<th>Name</th>
-						<th>Start date</th>
-						<th>End date</th>
-						<th>Recipes submit</th>
+						<th>Gender</th>
+						<th>Age</th>
 						<th>Action</th>
 					</tr>
 				</thead>
 				<tbody id="content">
 					<tr>
+						<td>
+							<div class="media align-items-center">
+								<img class="me-3 img-fluid rounded-circle" width="75" src="/UploadImg/02d33c6a-07cd-4729-a052-ebb02a4cc352.jpg">
+							</div>
+						</td>
 						<td>#5552351</td>
 						<td class="wspace-no">26 March 2020<br> 12:42 AM</td>
-						<td>$164.52</td>
-						<td><a class="btn btn-warning light btn-sm">Show recipe</a></td>
+						<td>Male</td>
+						
 						<td>
 							<div class="dropdown ms-auto c-pointer">
 								<div class="btn-link" data-bs-toggle="dropdown">
@@ -99,6 +96,5 @@
 	</div>
 </div>
 @section Script{
-	<script src="~/js/controller/user.js"></script>
+	<script src="~/js/controller/users.js"></script>
 }
-
