--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -200,7 +200,7 @@
                             <li>
                                 <a href="">Category</a>
                                 <ul aria-expanded="false">
-                                    <li><a href="/Admin/Ingredients">All categories</a></li>
+                                    <li><a href="/Admin/">All categories</a></li>
                                     <li><a href="/Admin/AddOrUpdateCategory">Add new</a></li>
                                 </ul>
                             </li>
