--- a/Views/Home/UpdateUser.cshtml
+++ b/Views/Home/UpdateUser.cshtml
@@ -17,23 +17,41 @@
             <span>
                 Họ và tên <span style=" color: #ff2424">*</span>
             </span>
-            <div class="input-setting" ondblclick="convertToInput(this)">Hoàn Nguyễn</div>
+            <input type="text" name="Name" placeholder="Enter Name"/>
+        </div>
+        <div>
+            <span>
+                Địa chỉ<span style=" color: #ff2424">*</span>
 
+            </span>
+            <input type="text" name="Adress" placeholder="Enter Adress"/>
         </div>
         <div>
-            <span>Địa chỉ</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">Ngũ kiên</div>
+            <span>
+                Số điện thoại<span style=" color: #ff2424">*</span>
+                </span>
+            <input type="number" name="Phone" placeholder="Phone"/>
         </div>
         <div>
-            <span>Số điện thoại</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">01236728733</div>
+            <span>
+                Email<span style=" color: #ff2424">*</span>
+                </span>
+           <input type="text" name="Email" placeholder="Enter Email"/>
         </div>
         <div>
-            <span>Email</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">hhhh@gmail.com</div>
+            <span>
+                Ngày Sinh<span style=" color: #ff2424">*</span>
+                </span>
+            <input type="number" name="BirthDay" placeholder="Enter BirthDay"/>
+        </div>
+        <div>
+            <span>
+                Gender<span style=" color: #ff2424">*</span>
+            </span>
+            <input type="text" name="Gender" placeholder="Enter Gender"/>
         </div>
         <div class="btn-save">
-            <button>Chỉnh Sửa</button>
+            <button>Save</button>
         </div>
     </div>
     <div class="img-infor">
@@ -53,28 +71,7 @@
                 </div>
             </div>
         </div>
-        <div class="list">
-            <ul>
-                <li>
-                    <div>
-                        <span>
-                            <i class="fa-solid fa-calendar"></i>
-                        </span>
-                        <p class="input-setting" ondblclick="convertToInput(this)">
-                            ngày sinh
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <span>
-                            <i class="fa-regular fa-user"></i>
-                        </span>
-                        <p class="input-setting" ondblclick="convertToInput(this)">Giới tính</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        
     </div>
 </div>
 @section Script{
