--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -886,6 +886,37 @@
                     cursor: pointer;
                 }
     </style>
+    <style>
+        
+
+        h1 {
+            text-align: center;
+        }
+
+        .tips-list {
+            text-align: center;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 10px 0;
+        }
+
+        a {
+            text-decoration: none;
+            color: blue;
+            cursor: pointer;
+        }
+
+        #tip-details {
+            display: none;
+        }
+
+    </style>
 </head>
 
 <body class="archive post-type-archive post-type-archive-envato_tk_templates elementor-default elementor-template-full-width elementor-kit-8 elementor-page-83">
