--- a/Views/Home/InforUser.cshtml
+++ b/Views/Home/InforUser.cshtml
@@ -6,40 +6,27 @@
 }
 <div class="container">
     <div class="info-user">
-        <h3>Thông tin cá nhân</h3>
-        <div class="display ">
-            <span style=" color: #ff2424">(*)</span>
-
-            <p>Thông tin bắt buộc</p>
-        </div>
+        <h3>Infor User</h3>
         <div>
-
             <span>
-                Họ và tên <span style=" color: #ff2424">*</span>
+                Fullname <span style=" color: #ff2424">*</span>
             </span>
             <div class="input-setting" ondblclick="convertToInput(this)">Hoàn Nguyễn</div>
-
         </div>
         <div>
-            <span>Địa chỉ</span>
+            <span>PhoneNumber</span>
             <div class="input-setting" ondblclick="convertToInput(this)">Ngũ kiên</div>
         </div>
         <div>
-            <span>Số điện thoại</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">01236728733</div>
+            <span>Age</span>
+            <div class="input-setting" ondblclick="convertToInput(this)">20</div>
         </div>
         <div>
             <span>Email</span>
             <div class="input-setting" ondblclick="convertToInput(this)">hhhh@gmail.com</div>
         </div>
         <div>
-            <span>Ngày Sinh</span>
-            <p class="input-setting" ondblclick="convertToInput(this)">
-                27/06/2003
-            </p>
-        </div>
-        <div>
-            <span>Giới Tính</span>
+            <span>Gender</span>
             <div class="input-setting" ondblclick="convertToInput(this)">Nam</div>
         </div>
         <div class="btn-save">
@@ -58,7 +45,7 @@
             </div>
             <div>
                 <div>
-                    <p>Chào bạn trở lại,</p>
+                    <p>Helloo,</p>
                     <h2 style="font-size:15px">Hoàn Nguyễn</h2>
                 </div>
             </div>
