--- a/Views/Home/SingleRecipe.cshtml
+++ b/Views/Home/SingleRecipe.cshtml
@@ -445,7 +445,7 @@
 								<div class="elementor-widget-wrap elementor-element-populated">
 									<div class="elementor-element elementor-element-25705f7 elementor-widget elementor-widget-heading" data-id="25705f7" data-element_type="widget" data-widget_type="heading.default">
 										<div class="elementor-widget-container">
-											<h4 class="elementor-heading-title elementor-size-default">Author</h4>
+											<h4 class="elementor-heading-title elementor-size-default">Author: @recipe.User.Name</h4>
 										</div>
 									</div>
 									<div class="elementor-element elementor-element-c5a7a2d elementor-position-left elementor-vertical-align-top elementor-widget elementor-widget-image-box" data-id="c5a7a2d" data-element_type="widget" data-widget_type="image-box.default">
@@ -510,7 +510,7 @@
 
 												.elementor-widget-image-box .elementor-image-box-description {
 													margin: 0
-												}</style><div class="elementor-image-box-wrapper"><figure class="elementor-image-box-img"><img decoding="async" fetchpriority="high" width="400" height="400" src="/@recipe.User.Avatar" class="attachment-full size-full wp-image-1091" alt="" srcset="/@recipe.User.Avatar 400w, /@recipe.User.Avatar 300w, /@recipe.User.Avatar 150w" sizes="(max-width: 400px) 100vw, 400px" /></figure><div class="elementor-image-box-content"><h5 class="elementor-image-box-title">@recipe.User.Name</h5></div></div>
+												}</style><div class="elementor-image-box-wrapper"><figure class="elementor-image-box-img"><img decoding="async" fetchpriority="high" width="400" height="400" src="/@recipe.User.Avatar" class="attachment-full size-full wp-image-1091" alt="" srcset="/@recipe.User.Avatar 400w, /@recipe.User.Avatar 300w, /@recipe.User.Avatar 150w" sizes="(max-width: 400px) 100vw, 400px" /></figure></div>
 										</div>
 									</div>
 								</div>
