--- a/Views/Home/UpdateUser.cshtml
+++ b/Views/Home/UpdateUser.cshtml
@@ -6,31 +6,25 @@
 }
 <div class="container">
     <div class="info-user">
-        <h3>Thông tin cá nhân</h3>
-        <div class="display ">
-            <span style=" color: #ff2424">(*)</span>
-
-            <p>Thông tin bắt buộc</p>
-        </div>
+        <h3>Update InforUser</h3>
         <div>
 
             <span>
-                Họ và tên <span style=" color: #ff2424">*</span>
+                Fullname <span style=" color: #ff2424">*</span>
             </span>
-            <input type="text" name="Name" placeholder="Enter Name" />
+            <input type="text" name="Name" placeholder="Enter FullName" />
         </div>
         <div>
             <span>
-                Địa chỉ<span style=" color: #ff2424">*</span>
-
+                PhoneNumber<span style=" color: #ff2424">*</span>
             </span>
-            <input type="text" name="Adress" placeholder="Enter Adress" />
+            <input type="text" name="Adress" placeholder="Enter PhoneNumber" />
         </div>
         <div>
             <span>
-                Số điện thoại<span style=" color: #ff2424">*</span>
+                Gender<span style=" color: #ff2424">*</span>
             </span>
-            <input type="number" name="Phone" placeholder="Phone" />
+            <input type="number" name="Phone" placeholder="Enter Gender" />
         </div>
         <div>
             <span>
@@ -40,15 +34,9 @@
         </div>
         <div>
             <span>
-                Ngày Sinh<span style=" color: #ff2424">*</span>
+                Age<span style=" color: #ff2424">*</span>
             </span>
-            <input type="number" name="BirthDay" placeholder="Enter BirthDay" />
-        </div>
-        <div>
-            <span>
-                Gender<span style=" color: #ff2424">*</span>
-            </span>
-            <input type="text" name="Gender" placeholder="Enter Gender" />
+            <input type="number" name="BirthDay" placeholder="Enter Age" />
         </div>
         <div class="btn-save">
             <button>Save</button>
@@ -66,7 +54,7 @@
             </div>
             <div>
                 <div>
-                    <p>Chào bạn trở lại,</p>
+                    <p>Helloo,</p>
                     <h2 style="font-size:15px">Hoàn Nguyễn</h2>
                 </div>
             </div>
