--- a/Views/Home/InforUser.cshtml
+++ b/Views/Home/InforUser.cshtml
@@ -1,5 +1,14 @@
-﻿@{
+﻿@using Project3.Repository
+@inject IUserRepository userRepository;
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<CustomUser> SignInManager
+@inject UserManager<CustomUser> UserManager
+
+@{
+    var email = @User.Identity.Name;
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
+    var in4 = await userRepository.FindByEmailAsync(email);
+
 }
 @section css{
     <link rel="stylesheet" href="~/css/site.css" />
@@ -11,23 +20,19 @@
             <span>
                 Fullname <span style=" color: #ff2424">*</span>
             </span>
-            <div class="input-setting" ondblclick="convertToInput(this)">Hoàn Nguyễn</div>
-        </div>
-        <div>
-            <span>PhoneNumber</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">Ngũ kiên</div>
+            <div class="input-setting" ondblclick="convertToInput(this)">@in4.Name</div>
         </div>
         <div>
             <span>Age</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">20</div>
+            <div class="input-setting" ondblclick="convertToInput(this)">@in4.Age</div>
         </div>
         <div>
             <span>Email</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">hhhh@gmail.com</div>
+            <div class="input-setting" ondblclick="convertToInput(this)">@in4.Email</div>
         </div>
         <div>
             <span>Gender</span>
-            <div class="input-setting" ondblclick="convertToInput(this)">Nam</div>
+            <div class="input-setting" ondblclick="convertToInput(this)">@in4.Gender</div>
         </div>
         <div class="btn-save">
             <button> <a href="/Home/UpdateUser">Chỉnh Sửa</a></button>
@@ -37,7 +42,7 @@
         <div class="left-infor">
             <div class="img-user">
                 <img style="width: 80px; height: 80px"
-                     src="https://scontent.fhan14-4.fna.fbcdn.net/v/t39.30808-1/343763552_1180827765960891_8460200521152297846_n.jpg?stp=dst-jpg_s320x320&_nc_cat=109&ccb=1-7&_nc_sid=fe8171&_nc_ohc=OLPIBM-0UYcAX-rJWjT&_nc_ht=scontent.fhan14-4.fna&oh=00_AfCZHUXItqDUn88oVXadL5elX0B-GL7FX3QcOpfNBVc2vg&oe=6511E4F8"
+                     src="/@in4.Avatar"
                      alt="" />
                 <span>
                     <i class="fa-solid fa-camera"></i>
@@ -46,7 +51,7 @@
             <div>
                 <div>
                     <p>Helloo,</p>
-                    <h2 style="font-size:15px">Hoàn Nguyễn</h2>
+                    <h2 style="font-size:15px">@in4.Name</h2>
                 </div>
             </div>
         </div>
@@ -55,4 +60,8 @@
 </div>
 @section Script{
     <script src="~/js/controller/user.js"></script>
+
+    <script src="~/js/controller/upload-avatar.js"></script>
+
+
 }
