--- a/Views/Home/UpdateUser.cshtml
+++ b/Views/Home/UpdateUser.cshtml
@@ -1,6 +1,17 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
 }
+@using Project3.Repository
+@inject IUserRepository userRepository;
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<CustomUser> SignInManager
+@inject UserManager<CustomUser> UserManager
+
+@{
+    var email = @User.Identity.Name;
+    Layout = "~/Views/Shared/_Layoutweb.cshtml";
+    var in4 = await userRepository.FindByEmailAsync(email);
+}
 @section css{
     <link rel="stylesheet" href="~/css/site.css" />
 }
@@ -12,31 +23,26 @@
             <span>
                 Fullname <span style=" color: #ff2424">*</span>
             </span>
-            <input type="text" name="Name" placeholder="Enter FullName" />
+            <input type="text" name="Name" placeholder="Enter FullName" value="@in4.Name"/>
         </div>
-        <div>
-            <span>
-                PhoneNumber<span style=" color: #ff2424">*</span>
-            </span>
-            <input type="text" name="Adress" placeholder="Enter PhoneNumber" />
-        </div>
+
         <div>
             <span>
                 Gender<span style=" color: #ff2424">*</span>
             </span>
-            <input type="number" name="Phone" placeholder="Enter Gender" />
+            <input type="text" name="Gender" placeholder="Enter Gender" value="@in4.Gender"/>
         </div>
         <div>
             <span>
                 Email<span style=" color: #ff2424">*</span>
             </span>
-            <input type="text" name="Email" placeholder="Enter Email" />
+            <input type="text" name="Email" placeholder="Enter Email" value="@in4.Email"/>
         </div>
         <div>
             <span>
                 Age<span style=" color: #ff2424">*</span>
             </span>
-            <input type="number" name="BirthDay" placeholder="Enter Age" />
+            <input type="number" name="Age" placeholder="Enter Age" value="@in4.Age"/> 
         </div>
         <div class="btn-save">
             <button>Save</button>
@@ -46,7 +52,7 @@
         <div class="left-infor">
             <div class="img-user">
                 <img style="width: 80px; height: 80px"
-                     src="https://scontent.fhan14-4.fna.fbcdn.net/v/t39.30808-1/343763552_1180827765960891_8460200521152297846_n.jpg?stp=dst-jpg_s320x320&_nc_cat=109&ccb=1-7&_nc_sid=fe8171&_nc_ohc=OLPIBM-0UYcAX-rJWjT&_nc_ht=scontent.fhan14-4.fna&oh=00_AfCZHUXItqDUn88oVXadL5elX0B-GL7FX3QcOpfNBVc2vg&oe=6511E4F8"
+                     src="/@in4.Avatar"
                      alt="" />
                 <span>
                     <i class="fa-solid fa-camera"></i>
@@ -55,7 +61,7 @@
             <div>
                 <div>
                     <p>Helloo,</p>
-                    <h2 style="font-size:15px">Hoàn Nguyễn</h2>
+                    <h2 style="font-size:15px">@in4.Name</h2>
                 </div>
             </div>
         </div>
