--- a/Views/Admin/Contests.cshtml
+++ b/Views/Admin/Contests.cshtml
@@ -52,7 +52,7 @@
 				<div class="card-body p-0">
 					<div class="table-responsive ">
 						<div class="card-footer border-0 pt-0 text-center">
-							<ul class="pagination pagination-gutter pagination-primary no-bg" id="pageList">
+							<ul class="pagination pagination-gutter pagination-primary pt-4 " id="pageList">
 							</ul>
 						</div>
 					</div>
